--- a/package.json
+++ b/package.json
@@ -1,33 +1,18 @@
 {
-  "name": "vue_login",
-  "version": "0.0.0",
+  "name": "vue-component-interaction",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.1.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.6",
-    "vitest": "^0.33.0"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "vite": "^4.3.9"
   }
 }
