--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "module-9",
-  "version": "0.0.0",
+  "name": "vue-shop",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
-    "vue": "^3.3.4",
+    "bootstrap": "^5.3.2",
+    "vue": "^3.2.47",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.1",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "vite": "^4.3.9"
   }
 }
