--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "login-todo",
-  "private": true,
+  "name": "ims",
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "element-plus": "^2.3.14",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
-    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
